Prevented pull-to-refresh on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,11 @@ html {
     font-size: 24pt;
     font-family: 'Lato', sans-serif;
     background-color: rgb(247, 241, 227);
+    overscroll-behavior: none;
+}
+
+body {
+  overscroll-behavior: none;
 }
 
 * {
